Small additions to content

--- a/docs/config/sfmc-config-permissions.mdx
+++ b/docs/config/sfmc-config-permissions.mdx
@@ -184,7 +184,7 @@ Permissions for _Interaction Studio_ (_Evergage_).
 
 #### Interaction Studio - Legacy
 
-__Legacy__ permissions for previous _Interaction Studio_ solution.
+__Legacy__ permissions for previous _Interaction Studio_ solution (_Thunderhead_).
 
 ---
 
@@ -196,14 +196,14 @@ _Tracking_ within _Email Studio_ is managed by separate permissions available wi
 
 Permissions for _Reports_.
 
-#### Analytics
-
-Additional permissions for _Reports_ and integration with _Google Analytics_.
-
 #### CampaignAnalytics
 
 Permissions enabling Campaign objects for _Reports_.
 Available only on Role level (cannot be limited as individual permission).
+
+#### Analytics
+
+Permissions for _Web Analytics_ and integration with _Google Analytics_.
 
 #### Discover
 
