--- a/docs/sql/sfmc-sql-conversion-functions.mdx
+++ b/docs/sql/sfmc-sql-conversion-functions.mdx
@@ -97,6 +97,7 @@ There are over 30 data types available for conversion, but there are only a few 
 | NVARCHAR | Variable-length string with Unicode support | Best option for most SFMC string use cases |
 | DECIMAL/NUMERIC | Decimal number with big precision | Best option if you need a decimal number |
 | INT | Integer number | Best option if your number is not decimal |
+| BIGINT | Big integer number | When your numer is bigger than 2,147,483,647, you need BIGINT |
 | DATETIME | Legacy date and time | More friendly default formatting |
 | DATETIME2 | Modern date and time | Best when you need both date and time |
 | DATE | Only date | Best when you need date only |
