--- a/docs/sql/sfmc-sql-date-functions.mdx
+++ b/docs/sql/sfmc-sql-date-functions.mdx
@@ -105,7 +105,7 @@ Very similar date calculation is also available with `DATEADD()` AMPScript funct
 
 ## FORMAT with Dates
 
-The `FORMAT` works only with datetime and numeric values and requires:
+The `FORMAT` works only with datetime and numeric values, outputs a string and requires:
 
 1. Value to be formatted (can be a column, string or a function)
 2. Format specifier to be applied
